# mps-fp8-for-torch-and-comfyui-python-package

./: README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
src/fp4_fp8_for_torch_mps/: __init__.py  _autoload.py  fp8_mps_native.py  ops.py
src/fp4_fp8_for_torch_mps/shaders/: fp8_matmul.metal
src/fp8_mps_metal/: __init__.py  _autoload.py  fp8_mps_native.py  ops.py
src/fp8_mps_metal/shaders/: fp8_matmul.metal
tests/: conftest.py  test_bench.py  test_fp4.py  test_fp8_correctness.py  test_fp8_metal.py  test_integration.py  test_mps_validation.py  test_mps_vs_cpu.py  test_sdpa.py
