[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fp4-fp8-for-torch-mps"
version = "1.0.0"
description = "FP8 (Float8_e4m3fn) support for Apple Silicon MPS backend"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["torch>=2.9"]

[project.urls]
Repository = "https://github.com/AppMana/mps-fp8-for-torch-and-comfyui-python-package"

[project.entry-points."torch.backends"]
fp4_fp8_for_torch_mps = "fp4_fp8_for_torch_mps._autoload:_autoload"

[tool.hatch.build.targets.wheel]
packages = ["src/fp4_fp8_for_torch_mps"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
